fixGetLastForOldJavaVersion